# bevy_farm_game_base

./: Cargo.toml  README.md
src/: controls.rs  gameplay_systems.rs  globals.rs  main.rs  particles.rs  setup.rs
src/controls/: camera.rs  controller.rs  controller_system.rs  menu.rs  player.rs
src/gameplay_systems/: cycles.rs  enemies.rs
src/globals/: character_modifiers.rs  scene_modifiers.rs  ui_modifiers.rs
src/setup/: camera.rs  menu.rs  scene.rs  settings.rs
src/states/: base.rs
